DROP TABLE IF EXISTS audit_log CASCADE;
DROP TABLE IF EXISTS matches CASCADE;
DROP TABLE IF EXISTS teams CASCADE;
DROP TABLE IF EXISTS tournaments CASCADE;
DROP TABLE IF EXISTS reservations CASCADE;
DROP TABLE IF EXISTS courts CASCADE;

CREATE TABLE courts (
    id             BIGINT       GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name           VARCHAR(80)  NOT NULL,
    sector         VARCHAR(40)  NOT NULL,
    has_parking    BOOLEAN      NOT NULL DEFAULT FALSE,
    sport_type     VARCHAR(30)  NOT NULL,
    floor_type     VARCHAR(40)  NOT NULL,
    price_per_hour DECIMAL(8,2) NOT NULL,
    active         BOOLEAN      NOT NULL DEFAULT TRUE,
    manager_user   VARCHAR(60)  NOT NULL,
    created_at     TIMESTAMP    NOT NULL DEFAULT NOW(),

    CONSTRAINT chk_courts_sport_type CHECK (sport_type = 'BASKET'),
    CONSTRAINT chk_courts_price      CHECK (price_per_hour > 0)
);

CREATE TABLE reservations (
    id               BIGINT      GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    court_id         BIGINT      NOT NULL,
    owner_user       VARCHAR(60) NOT NULL,
    owner_name       VARCHAR(80) NOT NULL,
    starts_at        TIMESTAMP   NOT NULL,
    duration_minutes INTEGER     NOT NULL,
    status           VARCHAR(20) NOT NULL DEFAULT 'CONFIRMED',
    created_at       TIMESTAMP   NOT NULL DEFAULT NOW(),

    CONSTRAINT fk_reservations_court
        FOREIGN KEY (court_id) REFERENCES courts (id) ON DELETE CASCADE,
    CONSTRAINT chk_reservations_status   CHECK (status IN ('CONFIRMED', 'CANCELLED')),
    CONSTRAINT chk_reservations_duration CHECK (duration_minutes > 0)
);

CREATE TABLE tournaments (
    id               BIGINT       GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name             VARCHAR(80)  NOT NULL,
    sport_type       VARCHAR(30)  NOT NULL,
    max_teams        INTEGER      NOT NULL,
    prize            VARCHAR(150),
    status           VARCHAR(20)  NOT NULL DEFAULT 'REGISTRATION',
    manager_user     VARCHAR(60)  NOT NULL,
    court_id         BIGINT,
    champion_team_id BIGINT,
    created_at       TIMESTAMP    NOT NULL DEFAULT NOW(),

    CONSTRAINT fk_tournaments_court
        FOREIGN KEY (court_id) REFERENCES courts (id) ON DELETE SET NULL,
    CONSTRAINT chk_tournaments_sport_type CHECK (sport_type = 'BASKET'),
    CONSTRAINT chk_tournaments_status
        CHECK (status IN ('REGISTRATION', 'IN_PROGRESS', 'FINISHED')),
    CONSTRAINT chk_tournaments_max_teams
        CHECK (max_teams IN (2, 4, 8, 16, 32))
);

CREATE TABLE teams (
    id                 BIGINT      GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tournament_id      BIGINT      NOT NULL,
    registered_by_user VARCHAR(60) NOT NULL,

    name               VARCHAR(80)  NOT NULL,
    contact_name       VARCHAR(80)  NOT NULL,
    contact_email      VARCHAR(120) NOT NULL,
    contact_phone      VARCHAR(30)  NOT NULL,

    eliminated         BOOLEAN NOT NULL DEFAULT FALSE,
    matches_played     INTEGER NOT NULL DEFAULT 0,
    matches_won        INTEGER NOT NULL DEFAULT 0,
    matches_lost       INTEGER NOT NULL DEFAULT 0,
    points_for         INTEGER NOT NULL DEFAULT 0,
    points_against     INTEGER NOT NULL DEFAULT 0,
    current_round      INTEGER NOT NULL DEFAULT 0,

    created_at         TIMESTAMP NOT NULL DEFAULT NOW(),

    CONSTRAINT fk_teams_tournament
        FOREIGN KEY (tournament_id) REFERENCES tournaments (id) ON DELETE CASCADE,
    CONSTRAINT uq_teams_tournament_name UNIQUE (tournament_id, name)
);

CREATE TABLE matches (
    id                BIGINT      GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tournament_id     BIGINT      NOT NULL,
    round_number      INTEGER     NOT NULL,
    position_in_round INTEGER     NOT NULL,
    home_team_id      BIGINT,
    away_team_id      BIGINT,
    home_score        INTEGER,
    away_score        INTEGER,
    winner_team_id    BIGINT,
    status            VARCHAR(20) NOT NULL DEFAULT 'PENDING',
    scheduled_at      TIMESTAMP,
    created_at        TIMESTAMP   NOT NULL DEFAULT NOW(),

    CONSTRAINT fk_matches_tournament
        FOREIGN KEY (tournament_id) REFERENCES tournaments (id) ON DELETE CASCADE,
    CONSTRAINT fk_matches_home_team   FOREIGN KEY (home_team_id)   REFERENCES teams (id) ON DELETE SET NULL,
    CONSTRAINT fk_matches_away_team   FOREIGN KEY (away_team_id)   REFERENCES teams (id) ON DELETE SET NULL,
    CONSTRAINT fk_matches_winner_team FOREIGN KEY (winner_team_id) REFERENCES teams (id) ON DELETE SET NULL,
    CONSTRAINT uq_matches_bracket_slot UNIQUE (tournament_id, round_number, position_in_round),
    CONSTRAINT chk_matches_status CHECK (status IN ('PENDING', 'READY', 'PLAYED')),
    CONSTRAINT chk_matches_winner CHECK (
        winner_team_id IS NULL OR winner_team_id = home_team_id OR winner_team_id = away_team_id
    )
);

ALTER TABLE tournaments
    ADD CONSTRAINT fk_tournaments_champion_team
        FOREIGN KEY (champion_team_id) REFERENCES teams (id) ON DELETE SET NULL;

CREATE TABLE audit_log (
    id          BIGINT       GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    entity_name VARCHAR(40)  NOT NULL,
    entity_id   BIGINT       NOT NULL,
    action      VARCHAR(10)  NOT NULL,
    user_sub    VARCHAR(80)  NOT NULL,
    user_name   VARCHAR(60)  NOT NULL,
    old_values  VARCHAR(2000),
    new_values  VARCHAR(2000),
    created_at  TIMESTAMP    NOT NULL DEFAULT NOW(),

    CONSTRAINT chk_audit_action CHECK (action IN ('INSERT', 'UPDATE', 'DELETE'))
);

CREATE INDEX idx_reservations_court ON reservations (court_id);
CREATE INDEX idx_reservations_owner ON reservations (owner_user);
CREATE INDEX idx_teams_tournament   ON teams (tournament_id);
CREATE INDEX idx_matches_tournament ON matches (tournament_id, round_number, position_in_round);
CREATE INDEX idx_audit_entity       ON audit_log (entity_name, entity_id);
